--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "ai-chat",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@ai-sdk/openai": "^1.1.12",
-    "@ai-sdk/react": "^1.1.16",
-    "@radix-ui/react-slot": "^1.1.2",
-    "ai": "^4.1.41",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.475.0",
-    "next": "15.1.7",
-    "openai": "^4.85.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "ai-chat",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@ai-sdk/openai": "^1.1.12",
+        "@ai-sdk/react": "^1.1.16",
+        "@langchain/core": "^0.3.40",
+        "@langchain/openai": "^0.4.4",
+        "@radix-ui/react-slot": "^1.1.2",
+        "ai": "^4.1.42",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "langchain": "^0.3.19",
+        "lucide-react": "^0.475.0",
+        "next": "15.1.7",
+        "openai": "^4.85.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "tailwind-merge": "^3.0.1",
+        "tailwindcss-animate": "^1.0.7"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@types/node": "^20.17.19",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.1.7",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.7.3"
+    }
 }
